kubernetes/apps/production/pager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pager
  namespace: pager
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: pager.0x69.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pager
                port:
                  number: 80
  tls:
    - hosts:
        - pager.0x69.xyz
      secretName: pager-tls
